对接De 文生文接口

--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -329,7 +329,7 @@
 	"pending": "待定",
 	"Permission denied when accessing microphone: {{error}}": "访问麦克风时权限被拒绝：{{error}}",
 	"Personalization": "",
-	"Plain text (.txt)": "PDF 文档 (.pdf)",
+	"Plain text (.txt)": "TXT 文档 (.txt)",
 	"Playground": "AI 对话游乐场",
 	"Positive attitude": "积极态度",
 	"Previous 30 days": "过去 30 天",
