feat: 一个版本，给老板看，好多coming soon哈哈哈哈

--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -569,7 +569,8 @@
   "Everything in Free": "所有免费功能",
   "Access to Llama 400B": "访问Llama 400B",
 	"Hello": "你好",
-	"Get smarter replies, upload files and pictures, and enjoy more features.":"获取更智能的回复、上传文件和图片，并享受更多功能。"
+	"Get smarter replies, upload files and pictures, and enjoy more features.":"获取更智能的回复、上传文件和图片，并享受更多功能。",
+	"Please log in to your wallet first": "请先登录您的钱包"
 
 
 }
