feat: 邀请列表获取

--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -570,7 +570,14 @@
   "Access to Llama 400B": "访问Llama 400B",
 	"Hello": "你好",
 	"Get smarter replies, upload files and pictures, and enjoy more features.":"获取更智能的回复、上传文件和图片，并享受更多功能。",
-	"Please log in to your wallet first": "请先登录您的钱包"
+	"Please log in to your wallet first": "请先登录您的钱包",
 
-
+		"userManagement": "用户管理",
+		"id": "编号",
+		"role": "角色",
+		"name": "名字",
+		"email": "邮箱",
+		"lastActive": "最后活跃时间",
+		"createdAt": "创建时间"
+	
 }
