钱包第三方登录修改

--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -518,6 +518,11 @@
 	"price": "价格",
 	"Buy": "购买",
 	"Rewards": "奖励",
+	"Transactions": "转账明细",
+	"JOIN KYC": "认证 KYC",
+	"Authed KYC": "已认证 KYC",
+	"Get Now!": "立即获取",
+	"Clock In": "签到",
 	"Export": "导出",
 	"Transfer Type": "转账类型",
 	"Enter Address": "输入地址",
