--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -536,8 +536,8 @@
 	"From Bitmart Exchange": "来自Bitmart交易所",
 	"Buy Now": "立即购买",
 	"Invite Friends to Earn DGC Rewards": "邀请好友赚取DGC奖励",
-	"Invite friends to create a wallet to earn 1000 DGCs rewards,your friends will also earn 1000 DGCs rewards.": "邀请朋友下载DeepLink并创建钱包，获得500 DGC奖励。你的朋友也将获得500 DGC奖励。",
-	"You can invite up to 10 friends per day, with a maximum reward of 10,000 DGCs per day.": "如果你的朋友在DeepLink上购买NFT，你将获得10%的DGC佣金奖励。",
+	"Invite friends to create a wallet to earn 1000 DGC rewards,your friends will also earn 1000 DGC rewards.": "邀请朋友下载DeepLink并创建钱包，获得500 DGC奖励。你的朋友也将获得500 DGC奖励。",
+	"You can invite up to 10 friends per day, with a maximum reward of 10,000 DGC per day.": "如果你的朋友在DeepLink上购买NFT，你将获得10%的DGC佣金奖励。",
 	"If your friends purchase DGC on DeepLink, you will receive a 10% DGC commission reward.": "如果你的朋友在DeepLink上购买DGC，你将获得10%的DGC佣金奖励。",
 	"Invite friends now": "立即邀请朋友",
 	"Select Wallet File": "上传钱包文件",
