更新 国际化

--- a/src/lib/i18n/locales/languages.json
+++ b/src/lib/i18n/locales/languages.json
@@ -1,11 +1,11 @@
 [
 	{
 		"code": "en-US",
-		"title": "English (US)"
+		"title": "English"
 	},
 	{
 		"code": "zh-CN",
-		"title": "Chinese (Simplified)"
+		"title": "中文"
 	}
 	
 ]
