--- a/src/lib/i18n/locales/languages.json
+++ b/src/lib/i18n/locales/languages.json
@@ -1,23 +1,54 @@
 [
-	{
-		"code": "en-US",
-		"title": "English"
-	},
-	{
-		"code": "zh-CN",
-		"title": "中文"
-	},
-	{
-		"code": "ja-JP",
-		"title": "日本語"
-	},
-	{
-		"code": "vi-VN",
-		"title": "Việt nam"
-	},
-	{
-		"code": "ko-KR",
-		"title": "로그인"
-	}
-	
+  {
+    "code": "en-US",
+    "title": "English"
+  },
+  {
+    "code": "zh-CN",
+    "title": "中文"
+  },
+  {
+    "code": "ja-JP",
+    "title": "日本語"
+  },
+  {
+    "code": "vi-VN",
+    "title": "Việt nam"
+  },
+  {
+    "code": "ko-KR",
+    "title": "로그인"
+  },
+  {
+    "code": "th-TH",
+    "title": "ไทย"
+  },
+  {
+    "code": "tr-TR",
+    "title": "Türkçesi"
+  },
+  {
+    "code": "ru-RU",
+    "title": "Русский"
+  },
+  {
+    "code": "de-DE",
+    "title": "Deutsch"
+  },
+  {
+    "code": "fr-FR",
+    "title": "Français"
+  },
+  {
+    "code": "es-ES",
+    "title": "Español"
+  },
+  {
+    "code": "pt-PT",
+    "title": "Português"
+  },
+  {
+    "code": "id-ID",
+    "title": "Indonesia"
+  }
 ]
