更新国际化 文本信息

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -27,7 +27,7 @@
   "a user": "ein Benutzer",
   "About": "Über",
   "Access on web, iOS, Android": "Zugang über Web, iOS, Android",
-  "Access to ": "Zugang zu",
+  "Access to ": "Zugang zu ",
   "Accurate information": "Genauere Informationen",
   "Add": "Hinzufügen",
   "Add a model": "Ein Modell hinzufügen",
@@ -631,5 +631,26 @@
   "name": "Name",
   "Name": "Name",
   "Clock In": "Eintragen",
-  "Share": "Teilen"
+  "Share": "Teilen",
+  "I. New User Creation Reward": "I. Belohnung für die Erstellung eines neuen Benutzers",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Nach der Vervollständigung der Authentifizierung eines neuen Benutzers erhält man eine <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC-Belohnung.",
+  "II. Referral Reward": "II. Empfehlungsbelohnung",
+  "Each user who successfully creates a wallet and invites others to create a KYC wallet will receive a <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC reward.": "Jeder Benutzer, der erfolgreich eine Brieftasche erstellt und andere dazu einlädt, eine KYC-Brieftasche zu erstellen, erhält eine <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC-Belohnung.",
+  "III. Clock in Reward": "III. Anmeldebelohnung",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>60</span> days after authentication is completed.": "Die Anmeldebelohnung ist für <span style='color: rgba(184, 142, 86, 1);'>60</span> Tage nach der Vervollständigung der Authentifizierung gültig.",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "Durch das Einloggen und Anmelden an einem Tag kann man <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC-Belohnungen verdienen; maximal <span style='color: rgba(184, 142, 86, 1);'>30</span> Anmeldebelohnungen.",
+  "Show me a code snippet": "Zeige mir einen Code-Ausschnitt",
+  "of a website's sticky header": "eines feststehenden Headers einer Website",
+  "Explain options trading": "Erkläre den Optionshandel",
+  "if I'm familiar with buying and selling stocks": "wenn ich mit dem Kaufen und Verkaufen von Aktien vertraut bin",
+  "Grammar check": "Grammatikprüfung",
+  "rewrite it for better readability ": "Schreibe es um, um eine bessere Lesbarkeit zu erreichen",
+  "Tell me a fun fact": "Erzähl mir eine interessante Tatsache",
+  "about the Roman Empire": "über das Römische Reich",
+  "Give me ideas": "Gib mir Ideen",
+  "for what to do with my kids' art": "zu dem, was ich mit der Kunst meiner Kinder anstellen kann",
+  "Overcome procrastination": "Überwinde die Prokrastination",
+  "give me tips": "Gib mir Tipps",
+  "Help me study": "Hilf mir beim Lernen",
+  "vocabulary for a college entrance exam": "Vokabular für eine Hochschulaufnahmeprüfung"
 }
