--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -631,5 +631,26 @@
   "name": "",
   "Name": "",
   "Clock In": "",
-  "Share": ""
+  "Share": "",
+  "I. New User Creation Reward": "",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "",
+  "II. Referral Reward": "",
+  "Each user who successfully creates a wallet and invites others to create a KYC wallet will receive a <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC reward.": "",
+  "III. Clock in Reward": "",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>60</span> days after authentication is completed.": "",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "",
+  "Show me a code snippet": "",
+  "of a website's sticky header": "",
+  "Explain options trading": "",
+  "if I'm familiar with buying and selling stocks": "",
+  "Grammar check":"",
+  "rewrite it for better readability ": "",
+  "Tell me a fun fact": "",
+  "about the Roman Empire": "",
+  "Give me ideas": "",
+  "for what to do with my kids' art": "",
+  "Overcome procrastination": "",
+  "give me tips": "",
+  "Help me study": "",
+  "vocabulary for a college entrance exam": ""
 }
