--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -27,7 +27,7 @@
   "a user": "un utilisateur",
   "About": "À propos",
   "Access on web, iOS, Android": "Accès sur le web, iOS, Android",
-  "Access to ": "Accès à",
+  "Access to ": "Accès à ",
   "Accurate information": "Informations précises",
   "Add": "Ajouter",
   "Add a model": "Ajouter un modèle",
@@ -630,5 +630,26 @@
   "name": "nom",
   "Name": "Nom",
   "Clock In": "Battre la carte",
-  "Share": "Partager"
+  "Share": "Partager",
+  "I. New User Creation Reward": "I. Récompense pour la création d'un nouvel utilisateur",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Après avoir effectué l'authentification du nouvel utilisateur, recevez une récompense de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
+  "II. Referral Reward": "II. Récompense pour la recommandation",
+  "Each user who successfully creates a wallet and invites others to create a KYC wallet will receive a <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC reward.": "Chaque utilisateur qui crée avec succès un portefeuille et invite les autres à créer un portefeuille KYC recevra une récompense de <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC.",
+  "III. Clock in Reward": "III. Récompense pour le pointage",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>60</span> days after authentication is completed.": "La récompense pour le pointage est valide pendant <span style='color: rgba(184, 142, 86, 1);'>60</span> jours après la fin de l'authentification.",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "Se connecter et effectuer le pointage pendant <span style='color: rgba(184, 142, 86, 1);'>1</span> jour permet d'obtenir des récompenses de <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC ; maximum de <span style='color: rgba(184, 142, 86, 1);'>30</span> récompenses pour le pointage.",
+  "Show me a code snippet": "Montrez-moi un extrait de code",
+  "of a website's sticky header": "d'un en-tête fixe d'un site web",
+  "Explain options trading": "Expliquez le trading d'options",
+  "if I'm familiar with buying and selling stocks": "si je suis familier avec l'achat et la vente de titres",
+  "Grammar check": "Vérification grammaticale",
+  "rewrite it for better readability ": "Réécrivez-le pour une meilleure lisibilité",
+  "Tell me a fun fact": "Dites-moi un fait amusant",
+  "about the Roman Empire": "sur l'Empire romain",
+  "Give me ideas": "Donnez-moi des idées",
+  "for what to do with my kids' art": "pour ce qu'on peut faire avec l'art de mes enfants",
+  "Overcome procrastination": "Surmontez la procrastination",
+  "give me tips": "Donnez-moi des conseils",
+  "Help me study": "Aidez-moi à étudier",
+  "vocabulary for a college entrance exam": "Vocabulaire pour un examen d'entrée à l'université"
 }
