--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -27,7 +27,7 @@
   "a user": "ユーザー",
   "About": "関於",
   "Access on web, iOS, Android": "Web、iOS、Android でのアクセス",
-  "Access to": "～へのアクセス",
+  "Access to ": "～へのアクセス",
   "Accurate information": "正確な情報",
   "Add": "追加する",
   "Add a model": "モデルを追加する",
@@ -631,5 +631,26 @@
   "Use Gravatar": "Gravatar を使用",
   "Use Initials": "イニシャルを使用",
   "name": "名前",
-  "Name": "名前"
+  "Name": "名前",
+  "I. New User Creation Reward": "I. 新規ユーザー作成報酬",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": " 新規ユーザー認証を完了した後、<span style='color: rgba(184, 142, 86, 1);'>1000</span>個の DGC 報酬を受け取ります。",
+  "II. Referral Reward": "II. 紹介報酬",
+  "Each user who successfully creates a wallet and invites others to create a KYC wallet will receive a <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC reward.": "ウォレットを成功裏に作成し、他の人を招待して KYC ウォレットを作成する各ユーザーは、<span style='color: rgba(184, 142, 86, 1);'>6000</span>個の DGC 報酬を受け取ります。",
+  "III. Clock in Reward": "III. 出勤打刻報酬",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>60</span> days after authentication is completed.": "認証完了後の<span style='color: rgba(184, 142, 86, 1);'>60</span>日間、出勤打刻報酬は有効です。",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "<span style='color: rgba(184, 142, 86, 1);'>1</span> 日間ログインして出勤打刻を行うと、<span style='color: rgba(184, 142, 86, 1);'>100</span>個の DGC 報酬を獲得できます。出勤打刻報酬は最大<span style='color: rgba(184, 142, 86, 1);'>30</span>回までです。",
+  "Show me a code snippet": "コードの断片を見せてください",
+  "of a website's sticky header": "ウェブサイトの固定ヘッダーの",
+  "Explain options trading": "オプション取引を説明してください",
+  "if I'm familiar with buying and selling stocks": "株の買い売りに慣れている場合",
+  "Grammar check": "文法チェック",
+  "rewrite it for better readability": "読みやすく書き直してください",
+  "Tell me a fun fact": "面白い事実を教えてください",
+  "about the Roman Empire": "ローマ帝国に関する",
+  "Give me ideas": "アイデアを教えてください",
+  "for what to do with my kids' art": "子供たちのアートをどうするかについて",
+  "Overcome procrastination": "先延ばし癖を克服してください",
+  "give me tips": "ヒントを教えてください",
+  "Help me study": "勉強を手伝ってください",
+  "vocabulary for a college entrance exam": "大学入試の語彙"
 }
