--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -27,7 +27,7 @@
   "a user": "um usuário",
   "About": "Sobre",
   "Access on web, iOS, Android": "Acesso na web, iOS, Android",
-  "Access to ": "Acesso a",
+  "Access to ": "Acesso a ",
   "Accurate information": "Informações precisas",
   "Add": "Adicionar",
   "Add a model": "Adicionar um modelo",
@@ -631,5 +631,26 @@
   "name": "nome",
   "Name": "Nome",
   "Clock In": "Registrar entrada",
-  "Share": "Compartilhar"
+  "Share": "Compartilhar",
+  "I. New User Creation Reward": "I. Recompensa por Criação de Novo Usuário",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Após completar a autenticação do novo usuário, receba uma recompensa de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
+  "II. Referral Reward": "II. Recompensa por Indicação",
+  "Each user who successfully creates a wallet and invites others to create a KYC wallet will receive a <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC reward.": "Cada usuário que criar com sucesso uma carteira e convidar outros a criar uma carteira KYC receberá uma recompensa de <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC.",
+  "III. Clock in Reward": "III. Recompensa por Check-in",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>60</span> days after authentication is completed.": "A recompensa por check-in é válida por <span style='color: rgba(184, 142, 86, 1);'>60</span> dias após a conclusão da autenticação.",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "Fazer login e check-in por <span style='color: rgba(184, 142, 86, 1);'>1</span> dia pode ganhar recompensas de <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC; máximo de <span style='color: rgba(184, 142, 86, 1);'>30</span> recompensas por check-in.",
+  "Show me a code snippet": "Mostre-me um trecho de código",
+  "of a website's sticky header": "de um cabeçalho fixo de um site web",
+  "Explain options trading": "Explique o trading de opções",
+  "if I'm familiar with buying and selling stocks": "se eu estiver familiarizado com a compra e venda de ações",
+  "Grammar check": "Verificação gramatical",
+  "rewrite it for better readability ": "Reescreva-o para melhor legibilidade",
+  "Tell me a fun fact": "Conte-me um fato divertido",
+  "about the Roman Empire": "sobre o Império Romano",
+  "Give me ideas": "Dê-me ideias",
+  "for what to do with my kids' art": "para o que fazer com a arte dos meus filhos",
+  "Overcome procrastination": "Superar a procrastinação",
+  "give me tips": "Dê-me dicas",
+  "Help me study": "Ajude-me a estudar",
+  "vocabulary for a college entrance exam": "Vocabulário para um exame de admissão à universidade"
 }
