--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -27,7 +27,7 @@
   "a user": "пользователь",
   "About": "О",
   "Access on web, iOS, Android": "Доступ в веб, iOS, Android",
-  "Access to ": "Доступ к",
+  "Access to ": "Доступ к ",
   "Accurate information": "Точные сведения",
   "Add": "Добавить",
   "Add a model": "Добавить модель",
@@ -630,5 +630,26 @@
   "name": "имя",
   "Name": "Имя",
   "Clock In": "Войти на работу",
-  "Share": "Поделиться"
+  "Share": "Поделиться",
+  "I. New User Creation Reward": "I. Премия за создание нового пользователя",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "После завершения аутентификации нового пользователя получите премию в <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
+  "II. Referral Reward": "II. Премия за рекомендацию",
+  "Each user who successfully creates a wallet and invites others to create a KYC wallet will receive a <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC reward.": "Каждый пользователь, успешно создавший кошелек и пригласивший других создать кошелек KYC, получит премию в <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC.",
+  "III. Clock in Reward": "III. Премия за отметку времени",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>60</span> days after authentication is completed.": "Премия за отметку времени действительна в течение <span style='color: rgba(184, 142, 86, 1);'>60</span> дней после завершения аутентификации.",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "Войдя в систему и отметившись в течение <span style='color: rgba(184, 142, 86, 1);'>1</span> дня, можно заработать <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC в виде премии; максимальное количество премий за отметку времени - <span style='color: rgba(184, 142, 86, 1);'>30</span>.",
+  "Show me a code snippet": "Покажите мне фрагмент кода",
+  "of a website's sticky header": "фиксированного заголовка веб-сайта",
+  "Explain options trading": "Объясните торговлю опциями",
+  "if I'm familiar with buying and selling stocks": "если я знаком с покупкой и продажей акций",
+  "Grammar check": "Проверка грамматики",
+  "rewrite it for better readability ": "Перепишите это для лучшей читаемости",
+  "Tell me a fun fact": "Расскажите мне интересный факт",
+  "about the Roman Empire": "о Римской империи",
+  "Give me ideas": "Дайте мне идеи",
+  "for what to do with my kids' art": "с чем можно делать с творчеством моих детей",
+  "Overcome procrastination": "Побороть прокрастинацию",
+  "give me tips": "Дайте мне советы",
+  "Help me study": "Помогите мне учиться",
+  "vocabulary for a college entrance exam": "Лексика для вступительного экзамена в университет"
 }
