--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -27,7 +27,7 @@
   "a user": "ผู้ใช้งานหนึ่ง",
   "About": "เกี่ยวกับ",
   "Access on web, iOS, Android": "เข้าถึงในเว็บ, iOS, Android",
-  "Access to ": "เข้าถึงไปยัง",
+  "Access to ": "เข้าถึงไปยัง ",
   "Accurate information": "ข้อมูลที่ถูกต้อง",
   "Add": "เพิ่ม",
   "Add a model": "เพิ่มโมเดล",
@@ -630,5 +630,26 @@
   "name": "ชื่อ",
   "Name": "ชื่อ",
   "Clock In": "ลงเวลาเข้างาน",
-  "Share": "แชร์"
-}
+  "Share": "แชร์",
+  "I. New User Creation Reward": "I. ค่าตอบแทนสำหรับการสร้างผู้ใช้ใหม่",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "หลังจากเสร็จสิ้นการยืนยันผู้ใช้ใหม่แล้ว รับค่าตอบแทน <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC",
+  "II. Referral Reward": "II. ค่าตอบแทนสำหรับการแนะนำ",
+  "Each user who successfully creates a wallet and invites others to create a KYC wallet will receive a <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC reward.": "แต่ละผู้ใช้งานที่สร้างกระเป๋าเงินสำเร็จและเชิญคนอื่นสร้างกระเป๋าเงิน KYC จะรับค่าตอบแทน <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC",
+  "III. Clock in Reward": "III. ค่าตอบแทนสำหรับการเช็คอิน",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>60</span> days after authentication is completed.": "ค่าตอบแทนสำหรับการเช็คอินมีผลใช้งานได้ในระยะเวลา <span style='color: rgba(184, 142, 86, 1);'>60</span> วันหลังจากเสร็จสิ้นการยืนยัน",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "การเข้าสู่ระบบและเช็คอินในระยะเวลา <span style='color: rgba(184, 142, 86, 1);'>1</span> วันสามารถทำเงินได้ค่าตอบแทน <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC; สูงสุดคือ <span style='color: rgba(184, 142, 86, 1);'>30</span> ค่าตอบแทนสำหรับการเช็คอิน",
+  "Show me a code snippet": "แสดงชิ้นส่วนของโค้ดให้ฉันดู",
+  "of a website's sticky header": "ของหัวข้อแน่นของเว็บไซต์",
+  "Explain options trading": "อธิบายการซื้อขายออปชัน",
+  "if I'm familiar with buying and selling stocks": "ถ้าฉันคุ้นเคยกับการซื้อขายหุ้น",
+  "Grammar check": "ตรวจสอบไวยากรณ์",
+  "rewrite it for better readability ": "เขียนใหม่เพื่อให้อ่านง่ายขึ้น",
+  "Tell me a fun fact": "บอกเล่าเรื่องที่น่าสนใจให้ฉันฟัง",
+  "about the Roman Empire": "เกี่ยวกับอาณาจักรโรมัน",
+  "Give me ideas": "ให้ความคิดแก่ฉัน",
+  "for what to do with my kids' art": "สำหรับสิ่งที่จะทำกับงานศิลปะของลูก ๆ ของฉัน",
+  "Overcome procrastination": "เอาชนะการล่าช้า",
+  "give me tips": "ให้คำแนะนำแก่ฉัน",
+  "Help me study": "ช่วยฉันในการเรียน",
+  "vocabulary for a college entrance exam": "คำศัพท์สำหรับการสอบเข้า kolej"
+  }
