--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -27,7 +27,7 @@
   "a user": "bir kullanıcı",
   "About": "Hakkında",
   "Access on web, iOS, Android": "Web, iOS, Android üzerinden erişim",
-  "Access to ": "Erişim için",
+  "Access to ": "Erişim için ",
   "Accurate information": "Doğru bilgi",
   "Add": "Ekle",
   "Add a model": "Bir model ekle",
@@ -631,5 +631,26 @@
   "name": "isim",
   "Name": "İsim",
   "Clock In": "Giriş Yap",
-  "Share": "Paylaş"
-}
+  "Share": "Paylaş",
+  "I. New User Creation Reward": "I. Yeni Kullanıcı Oluşturma Ödülü",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Yeni kullanıcı doğrulamasını tamamladıktan sonra, <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC ödülü alırsınız.",
+  "II. Referral Reward": "II. Tavsiye Ödülü",
+  "Each user who successfully creates a wallet and invites others to create a KYC wallet will receive a <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC reward.": "Başarıyla cüzdan oluşturup diğerlerini KYC cüzdan oluşturmaya davet eden her kullanıcı <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC ödülü alacak.",
+  "III. Clock in Reward": "III. Giriş Kaydı Ödülü",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>60</span> days after authentication is completed.": "Doğrulama tamamlandıktan sonra <span style='color: rgba(184, 142, 86, 1);'>60</span> gün boyunca giriş kaydı ödülü geçerli olacak.",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "Bir gün boyunca giriş yapıp giriş kaydı yaptırabilirsiniz ve <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC ödülü kazanabilirsiniz; maksimum <span style='color: rgba(184, 142, 86, 1);'>30</span> giriş kaydı ödülü.",
+  "Show me a code snippet": "Bana bir kod parçacığını göster",
+  "of a website's sticky header": "bir web sitesinin sabit başlığının",
+  "Explain options trading": "Opsiyon ticaretini açıklayın",
+  "if I'm familiar with buying and selling stocks": "eğer hisse senetlerini alıp satmaya aşinaım ise",
+  "Grammar check": "Nitelik denetimi",
+  "rewrite it for better readability ": "Daha okunabilir hale getirmek için yeniden yazın",
+  "Tell me a fun fact": "Bana eğlenceli bir gerçeği söyle",
+  "about the Roman Empire": "Romalı İmparatorluğa dair",
+  "Give me ideas": "Bana fikirler ver",
+  "for what to do with my kids' art": "çocuklarımın sanat eserleriyle ne yapacağım için",
+  "Overcome procrastination": "Ertelemeyi aşın",
+  "give me tips": "Bana ipuçları ver",
+  "Help me study": "Benim için çalışmaya yardım et",
+  "vocabulary for a college entrance exam": "Üniversite giriş sınavı için kelime hazinesi"
+  }
