--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -27,7 +27,7 @@
   "a user": "một người dùng",
   "About": "Về",
   "Access on web, iOS, Android": "Truy cập trên web, iOS, Android",
-  "Access to ": "Truy cập vào",
+  "Access to ": "Truy cập vào ",
   "Accurate information": "Thông tin chính xác",
   "Add": "Thêm",
   "Add a model": "Thêm một mô hình",
@@ -631,5 +631,26 @@
   "name": "tên",
   "Name": "Tên",
   "Clock In": "Điểm danh",
-  "Share": "Chia sẻ"
+  "Share": "Chia sẻ",
+  "I. New User Creation Reward": "I. Thưởng cho việc tạo tài khoản người dùng mới",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Sau khi hoàn thành xác thực người dùng mới, sẽ nhận được phần thưởng <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
+  "II. Referral Reward": "II. Thưởng cho việc giới thiệu",
+  "Each user who successfully creates a wallet and invites others to create a KYC wallet will receive a <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC reward.": "Mỗi người dùng thành công tạo ví và mời người khác tạo ví KYC sẽ nhận được phần thưởng <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC.",
+  "III. Clock in Reward": "III. Thưởng cho việc check-in",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>60</span> days after authentication is completed.": "Phần thưởng cho việc check-in có hiệu lực trong <span style='color: rgba(184, 142, 86, 1);'>60</span> ngày sau khi hoàn thành xác thực.",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "Đăng nhập và check-in trong <span style='color: rgba(184, 142, 86, 1);'>1</span> ngày có thể kiếm được phần thưởng <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC; tối đa <span style='color: rgba(184, 142, 86, 1);'>30</span> phần thưởng cho việc check-in.",
+  "Show me a code snippet": "Hiển thị cho tôi một đoạn mã code",
+  "of a website's sticky header": "của tiêu đề dính của một trang web",
+  "Explain options trading": "Giải thích về giao dịch quyền chọn",
+  "if I'm familiar with buying and selling stocks": "nếu tôi quen với việc mua và bán cổ phiếu",
+  "Grammar check": "Kiểm tra ngữ pháp",
+  "rewrite it for better readability ": "Viết lại cho dễ đọc hơn",
+  "Tell me a fun fact": "Nói cho tôi biết một sự kiện thú vị",
+  "about the Roman Empire": "về Đế chế La Mã",
+  "Give me ideas": "Đưa cho tôi các ý tưởng",
+  "for what to do with my kids' art": "để làm gì với tác phẩm nghệ thuật của con cái tôi",
+  "Overcome procrastination": "Vượt qua sự trì hoãn",
+  "give me tips": "Đưa cho tôi các mẹo",
+  "Help me study": "Giúp tôi học tập",
+  "vocabulary for a college entrance exam": "Từ vựng cho kỳ thi tuyển sinh đại học"
 }
