--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -9,7 +9,7 @@
   "a user": "一名用户",
   "About": "关于",
   "Access on web, iOS, Android": "可在网页、iOS、安卓设备上访问",
-  "Access to": "访问",
+  "Access to ": "可访问 ",
   "Account": "账户",
   "Accurate information": "准确信息",
   "Add": "添加",
@@ -524,7 +524,7 @@
   "The length of the name cannot be less than 3 characters": "名称的长度不能少于 3 个字符",
   "The length of the name cannot exceed 12 characters": "名称的长度不能超过 12 个字符",
   "The score should be a value between 0.0 (0%) and 1.0 (100%).": "分数应该是介于 0.0（0%）和 1.0（100%）之间的值。",
-  "The usage limit for the model Llama-3.1-400B is 10 times per day, other models 100 times per day.": "Llama-3.1-400B 模型的使用限制是每天 10 次，其他模型每天 100 次。",
+  "The usage limit for the model Llama-3.1-405B is 10 times per day, other models 100 times per day.": "Llama-3.1-400B 模型的使用限制是每天 10 次，其他模型每天 100 次。",
   "The usage limit for the model Llama-3.1-405B is 1000 times per day, other models 10000 times per day.": "Llama-3.1-405B 模型的使用限制是每天 1000 次，其他模型每天 10000 次。",
   "The user you invite must complete wallet creation and KYC verification process before you can receive the reward": "你邀请的用户必须完成钱包创建和了解你的客户（KYC）验证流程，然后你才能获得奖励",
   "Theme": "主题；主题风格",
@@ -630,5 +630,26 @@
   "Invalid private key": "无效的私钥",
   "Invalid keystore file": "无效的KeyStore文件",
   "Please input password": "请输入密码",
-  "Incorrect password": "密码输入错误"
+  "Incorrect password": "密码输入错误",
+  "I. New User Creation Reward": "I. 新用户创建奖励",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "完成新用户认证后，可获得一个<span style='color: rgba(184, 142, 86, 1);'>1000</span>个 DGC 的奖励。",
+  "II. Referral Reward": "II. 推荐奖励",
+  "Each user who successfully creates a wallet and invites others to create a KYC wallet will receive a <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC reward.": "每个成功创建钱包并邀请他人创建 KYC 钱包的用户，将获得一个<span style='color: rgba(184, 142, 86, 1);'>6000</span>个 DGC 的奖励。",
+  "III. Clock in Reward": "III. 签到奖励",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>60</span> days after authentication is completed.": "签到奖励在完成认证后的<span style='color: rgba(184, 142, 86, 1);'>60</span>天内有效。",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "每日登录并签到可赚取<span style='color: rgba(184, 142, 86, 1);'>100</span>个 DGC 奖励；最多可获得<span style='color: rgba(184, 142, 86, 1);'>30</span>次签到奖励。",
+  "Show me a code snippet": "给我展示一段代码片段",
+  "of a website's sticky header": "一个网站的粘性头部（固定头部）的",
+  "Explain options trading": "解释一下期权交易",
+  "if I'm familiar with buying and selling stocks": "如果我熟悉股票买卖的话",
+  "Grammar check": "语法检查",
+  "rewrite it for better readability": "为了提高可读性而重写它",
+  "Tell me a fun fact": "给我讲一个有趣的事实",
+  "about the Roman Empire": "关于罗马帝国的",
+  "Give me ideas": "给我出出主意",
+  "for what to do with my kids' art": "关于如何处理我孩子的艺术作品（的主意）",
+  "Overcome procrastination": "克服拖延（的毛病）",
+  "give me tips": "给我些建议",
+  "Help me study": "帮我学习",
+  "vocabulary for a college entrance exam": "大学入学考试的词汇"
 }
