--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -27,7 +27,7 @@
   "a user": "seorang pengguna",
   "About": "Tentang",
   "Access on web, iOS, Android": "Akses di web, iOS, Android",
-  "Access to ": "Akses ke",
+  "Access to ": "Akses ke ",
   "Accurate information": "Informasi yang akurat",
   "Add": "Tambah",
   "Add a model": "Tambah sebuah model",
@@ -631,5 +631,26 @@
   "name": "nama",
   "Name": "Nama",
   "Clock In": "Absen Masuk",
-  "Share": "Bagikan"
+  "Share": "Bagikan",
+  "I. New User Creation Reward": "I. Hadiah Pembuatan Pengguna Baru",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Setelah menyelesaikan autentikasi pengguna baru, terima hadiah sebesar <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
+  "II. Referral Reward": "II. Hadiah Rujukan",
+  "Each user who successfully creates a wallet and invites others to create a KYC wallet will receive a <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC reward.": "Setiap pengguna yang berhasil membuat dompet dan mengundang orang lain untuk membuat dompet KYC akan menerima hadiah sebesar <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC.",
+  "III. Clock in Reward": "III. Hadiah Absensi",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>60</span> days after authentication is completed.": "Hadiah absensi berlaku selama <span style='color: rgba(184, 142, 86, 1);'>60</span> hari setelah autentikasi selesai.",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "Masuk ke akun dan melakukan absensi selama <span style='color: rgba(184, 142, 86, 1);'>1</span> hari dapat menghasilkan hadiah sebesar <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC; maksimum <span style='color: rgba(184, 142, 86, 1);'>30</span> hadiah absensi.",
+  "Show me a code snippet": "Tunjukkan kepada saya potongan kode",
+  "of a website's sticky header": "dari judul tetap situs web",
+  "Explain options trading": "Jelaskan perdagangan opsi",
+  "if I'm familiar with buying and selling stocks": "jika saya sudah akrab dengan membeli dan menjual saham",
+  "Grammar check": "Pemeriksaan tata bahasa",
+  "rewrite it for better readability ": "Tulis ulang untuk keterbacaan yang lebih baik",
+  "Tell me a fun fact": "Ceritakan kepada saya suatu fakta menarik",
+  "about the Roman Empire": "tentang Kekaisaran Romawi",
+  "Give me ideas": "Berikan saya ide-ide",
+  "for what to do with my kids' art": "untuk apa yang harus dilakukan dengan karya anak-anak saya",
+  "Overcome procrastination": "Mengatasi prokrastinasi",
+  "give me tips": "Berikan saya tips",
+  "Help me study": "Bantu saya belajar",
+  "vocabulary for a college entrance exam": "Kosa kata untuk ujian masuk perguruan tinggi"
 }
