--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -27,7 +27,7 @@
   "a user": "사용자",
   "About": "에 관하여",
   "Access on web, iOS, Android": "웹, iOS, 안드로이드에서 접근",
-  "Access to ": "에 접근",
+  "Access to ": "에 접근 ",
   "Accurate information": "정확한 정보",
   "Add": "추가",
   "Add a model": "모델 추가",
@@ -631,5 +631,26 @@
   "name": "이름",
   "Name": "이름",
   "Clock In": "출근",
-  "Share": "공유"
+  "Share": "공유",
+  "I. New User Creation Reward": "I. 신규 사용자 생성 보상",
+  "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "신규 사용자 인증을 완료한 후, <span style='color: rgba(184, 142, 86, 1);'>1000</span>개의 DGC 보상을 받습니다.",
+  "II. Referral Reward": "II. 추천 보상",
+  "Each user who successfully creates a wallet and invites others to create a KYC wallet will receive a <span style='color: rgba(184, 142, 86, 1);'>6000</span> DGC reward.": "지갑을 성공적으로 만들고 다른 사람들을 초대하여 KYC 지갑을 만들어낸 각 사용자는 <span style='color: rgba(184, 142, 86, 1);'>6000</span>개의 DGC 보상을 받습니다.",
+  "III. Clock in Reward": "III. 출근 기록 보상",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>60</span> days after authentication is completed.": "인증이 완료된 후 <span style='color: rgba(184, 142, 86, 1);'>60</span>일 동안 출근 기록 보상이 유효합니다.",
+  "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "<span style='color: rgba(184, 142, 86, 1);'>1</span>일 동안 로그인하고 출근 기록을 남기는 경우 <span style='color: rgba(184, 142, 86, 1);'>100</span>개의 DGC 보상을 받을 수 있습니다. 출근 기록 보상은 최대 <span style='color: rgba(184, 142, 86, 1);'>30</span>회까지 가능합니다.",
+  "Show me a code snippet": "코드 조각을 보여주세요",
+  "of a website's sticky header": "웹사이트의 고정 헤더의",
+  "Explain options trading": "옵션 거래를 설명해주세요",
+  "if I'm familiar with buying and selling stocks": "주식의 구매와 판매에 익숙한 경우",
+  "Grammar check": "문법 체크",
+  "rewrite it for better readability ": "더 읽기 쉽게 다시 쓰세요",
+  "Tell me a fun fact": "재미있는 사실을 알려주세요",
+  "about the Roman Empire": "로마 제국에 관한",
+  "Give me ideas": "아이디어를 알려주세요",
+  "for what to do with my kids' art": "제 자녀들의 예술 작품을 어떻게 처리할지에 대한",
+  "Overcome procrastination": "지연행동을 극복하세요",
+  "give me tips": "팁을 알려주세요",
+  "Help me study": "공부를 도와주세요",
+  "vocabulary for a college entrance exam": "대학 입학 시험용 어휘"
 }
